--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.9",
+        "kreait/firebase-php": "^7.16",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.16",
@@ -68,4 +69,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
